The egeo-get-color show the correct warning when the color is not found.

--- a/src/tools/_tools.colors.scss
+++ b/src/tools/_tools.colors.scss
@@ -57,7 +57,7 @@
 				$result: map-get($egeo-colors, $color);
 			} @else {
 				@if function-exists(egeo-log) {
-					@if egeo-log('@egeo-get-color::The color #{color} not exist in $egeo-colors.', $egeo-log-warn) {}
+					@if egeo-log('@egeo-get-color::The color #{$color} not exist in $egeo-colors.', $egeo-log-warn) {}
 				}
 			}
 		} @else {
